{
    "name": "InputGrabber",
    "maps": [
        {
            "name": "InGame",
            "id": "de3de1bf-7d2d-43d6-a067-8ec44de69679",
            "actions": [
                {
                    "name": "MoveLeftLeg",
                    "type": "Value",
                    "id": "a2e43d65-5d2c-453a-9aee-b14b082aa011",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveRightLeg",
                    "type": "Value",
                    "id": "7680a0be-5f16-404b-98f7-0c6763674d80",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "GrabLeft",
                    "type": "Button",
                    "id": "a27d1667-8da4-4328-97b7-84e629d20ab8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "GrabRight",
                    "type": "Button",
                    "id": "7e914bd0-11d2-4e50-9c1a-04677901c8c7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "b0f18489-8334-466a-8634-99cbdd675682",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeftLeg",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "94c742a2-c701-4026-a51d-9ff77c74ff7c",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeftLeg",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "73adebe9-b1e9-4af2-b589-57711152a6e6",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeftLeg",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "da30dbc0-e6d3-494b-805a-26acb9335f9d",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeftLeg",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "688eaef9-c3b1-4707-a37b-3511309da713",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeftLeg",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "0720ad56-e90a-469a-bb31-871ff84edc71",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GrabLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "77e19c0b-0d89-4eda-a9e1-4b228f7951b7",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRightLeg",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "016ae2b6-ba57-4b29-b7bb-102a7a93fd07",
                    "path": "<Gamepad>/rightStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRightLeg",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "6b998e4d-95d6-408f-b566-eafd732915ed",
                    "path": "<Gamepad>/rightStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRightLeg",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "7862c4e9-ce2b-4d90-a673-ac82ec543e5f",
                    "path": "<Gamepad>/rightStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRightLeg",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "5c8bd64e-3a5c-4560-9b53-3c3c311dea96",
                    "path": "<Gamepad>/rightStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRightLeg",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "138bb1a8-665d-4a16-b3ed-e204154e9d08",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GrabRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}